# Romhack-C

./: .gitignore  Cargo.toml  Makefile  README.md  RomHack.toml
source/: lib.c  patch.asm
src/: README.md  lib.rs
